--- a/package.json
+++ b/package.json
@@ -1,19 +1,29 @@
 {
-  "name": "libx",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "react-scripts": "1.1.5"
-  },
+  "name": "react-es6-popup-example",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "build": "webpack -w --display-error-details --progress --colors",
+    "start": "web-ext run -s extension/"
   },
+  "author": "",
+  "license": "MPL-2.0",
   "devDependencies": {
-    "web-ext": "^2.9.1"
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "web-ext": "2.9.0",
+    "webpack": "3.10.0"
+  },
+  "dependencies": {
+    "@material-ui/core": "3.0.1",
+    "@material-ui/icons": "3.0.1",
+    "eslint-plugin-react": "7.11.1",
+    "material-ui": "0.20.2"
   }
 }
