--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "react-es6-popup-example",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "libx-3.0",
+  "version": "0.1.0",
+  "private": true,
+  "main": "App.js",
   "scripts": {
     "build": "webpack -w --display-error-details --progress --colors",
-    "start": "web-ext run -s extension/"
+    "start": "web-ext run -f=\"C:\\Program Files\\Firefox Developer Edition\\firefox.exe\" -s extension/"
   },
-  "author": "",
-  "license": "MPL-2.0",
-  "devDependencies": {
+  "dependencies": {
+    "@material-ui/core": "3.1.0",
+    "@material-ui/icons": "3.0.1",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-preset-env": "1.6.1",
-    "babel-preset-react": "6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "6.24.1",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
-    "web-ext": "2.9.0",
-    "webpack": "3.10.0"
+    "react": "16.5.2",
+    "react-dom": "16.5.2",
+    "react-scripts": "1.1.5",
+    "web-ext": "2.9.1",
+    "webpack": "4.19.0"
   },
-  "dependencies": {
-    "@material-ui/core": "3.0.1",
-    "@material-ui/icons": "3.0.1",
-    "eslint-plugin-react": "7.11.1",
-    "material-ui": "0.20.2"
+  "devDependencies": {
+    "babel-eslint": "9.0.0",
+    "eslint": "5.6.0",
+    "webpack-cli": "3.1.0"
   }
 }
