--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,30 +1,24 @@
 {
+  "parser": "babel-eslint",
   "parserOptions": {
+    "ecmaVersion": 6,
     "sourceType": "module",
     "ecmaFeatures": {
-      "jsx": true
+      "jsx": true,
+      "experimentalObjectRestSpread": true
     }
   },
   "env": {
     "browser": true,
     "es6": true,
     "amd": true,
+    "node": true,
     "webextensions": true
   },
-  "settings": {
-    "react": {
-      "createClass": "createReactClass", 
-      "pragma": "React",  
-      "version": "15.0", 
-      "flowVersion": "0.53" 
-    },
-    "propWrapperFunctions": [ "forbidExtraProps" ] 
+  "rules": {
+    "no-console": "off",
+    "no-unused-vars": 0
   },
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended"
-  ],
-  "plugins": [
-    "react"
-  ]
+
+  "extends": ["eslint:recommended", "plugin:react/recommended"]
 }
