--- a/package.json
+++ b/package.json
@@ -15,15 +15,22 @@
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "6.24.1",
+    "formik": "1.3.0",
     "react": "16.5.2",
     "react-dom": "16.5.2",
     "react-scripts": "1.1.5",
     "web-ext": "2.9.1",
-    "webpack": "4.19.0"
+    "yup": "0.26.5"
   },
   "devDependencies": {
-    "babel-eslint": "9.0.0",
-    "eslint": "5.6.0",
+    "babel-eslint": "8.2.6",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-loader": "2.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-react": "7.11.1",
+    "webpack": "4.19.0",
     "webpack-cli": "3.1.0"
   }
 }
