--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formik": "1.3.0",
     "react": "16.5.2",
     "react-dom": "16.5.2",
+    "react-redux": "5.0.7",
     "react-scripts": "1.1.5",
     "web-ext": "2.9.1",
     "xml2js": "0.4.19",
@@ -30,6 +31,7 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-react": "7.11.1",
+    "redux": "4.0.0",
     "webpack": "4.19.0",
     "webpack-cli": "3.1.0"
   }
