--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "16.5.2",
     "react-redux": "5.0.7",
     "react-scripts": "1.1.5",
+    "redux-devtools": "3.4.1",
+    "redux-thunk": "2.3.0",
     "web-ext": "2.9.1",
     "xml2js": "0.4.19",
     "yup": "0.26.5"
@@ -32,6 +34,7 @@
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-react": "7.11.1",
     "redux": "4.0.0",
+    "remote-redux-devtools": "0.5.0",
     "webpack": "4.19.0",
     "webpack-cli": "3.1.0"
   }
