--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -13,5 +13,5 @@
     "default_popup": "popup.html"
   },
 
-  "permissions": ["<all_urls>","activeTab"]
+  "permissions": ["<all_urls>","storage"]
 }
