--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "formik": "1.3.0",
+    "formik-persist": "1.1.0",
     "react": "16.5.2",
     "react-dom": "16.5.2",
     "react-redux": "5.0.7",
