--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@material-ui/core": "3.1.0",
     "@material-ui/icons": "3.0.1",
+    "autosuggest-highlight": "3.1.1",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-preset-env": "1.6.1",
@@ -17,6 +18,8 @@
     "formik": "1.3.0",
     "formik-persist": "1.1.0",
     "react": "16.5.2",
+    "react-autocomplete": "1.8.1",
+    "react-autosuggest": "9.4.2",
     "react-dom": "16.5.2",
     "react-redux": "5.0.7",
     "react-scripts": "1.1.5",
