--- a/package.json
+++ b/package.json
@@ -1,36 +1,30 @@
 {
-  "name": "libx-3.0",
+  "name": "libx",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "build": "webpack -d -w --display-error-details --progress --colors",
-    "start": "web-ext run -f=\"C:\\Program Files\\Firefox Developer Edition\\firefox.exe\" -s extension/"
-  },
   "dependencies": {
-    "@material-ui/core": "3.1.0",
-    "@material-ui/icons": "3.0.1",
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "6.24.1",
-    "formik": "1.3.0",
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
-    "react-scripts": "1.1.5",
-    "web-ext": "2.9.1",
-    "xml2js": "0.4.19",
-    "yup": "0.26.5"
+    "@material-ui/core": "^3.9.0",
+    "@material-ui/icons": "^3.0.2",
+    "classnames": "latest",
+    "prop-types": "latest",
+    "react": "^16.7.0",
+    "react-autosuggest": "^9.4.3",
+    "react-dom": "^16.7.0",
+    "react-scripts": "2.1.3"
   },
-  "devDependencies": {
-    "babel-eslint": "8.2.6",
-    "eslint": "4.19.1",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-loader": "2.1.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-react": "7.11.1",
-    "webpack": "4.19.0",
-    "webpack-cli": "3.1.0"
-  }
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
