--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "dependencies": {
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
+    "@webpack-cli/init": "^0.1.3",
+    "autosuggest-highlight": "^3.1.1",
     "classnames": "latest",
     "prop-types": "latest",
     "react": "^16.7.0",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "webpack-cli": "^3.2.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "webpack -w --display-error-details --progress --colors",
+    "start": "web-ext run --firefox=firefoxdeveloperedition -s extension/"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -26,5 +27,18 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
+    ]
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.0.0",
+    "webpack": "^4.28.4"
+  }
 }
