--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "libx",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
@@ -16,8 +15,8 @@
     "webpack-cli": "^3.2.1"
   },
   "scripts": {
-    "build": "webpack -d -w --display-error-details --progress --colors",
-    "start": "web-ext run --firefox=firefoxdeveloperedition -s extension/"
+    "build": "webpack",
+    "start": "web-ext run -s extension/"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,7 +37,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.0.0",
-    "webpack": "^4.28.4"
+    "@babel/preset-react": "^7.0.0"
   }
 }
